tests/compilation_error/duplicate_default.ll
default light S1
default light S2

print "hi" // a valid program must have at least one instruction
